fix lightbox display on mobile

--- a/portfolio.css
+++ b/portfolio.css
@@ -236,6 +236,13 @@ html, body {
 	display: none;
 }
 
+.lity-iframe-container {
+	height: 80%;
+}
+
+.lity-container {
+	width: 100%;
+}
 /***************************LIGHTBOX CSS*******************/
 .lightbox {
 	background-color: black;
